--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -391,7 +391,7 @@ cas.dashboard.tooltip.swf=Shows the current collection of Spring Webflow states,
 # Login View
 #####################################################################
 #Resources Labels
-cas.login.pagetitle=Login
+cas.login.pagetitle=Authentication Service
 cas.login.resources.header=Links to CAS Resources
 cas.login.resources.wiki=Documentation
 cas.login.resources.issuetracker=Issue Tracker
